Change to bar chart on summary page

--- a/templates/summary.html
+++ b/templates/summary.html
@@ -187,7 +187,7 @@
                 plugins: {
                     legend: {
                         display: true,
-                        position: 'top',
+                        position: 'middle',
                         labels: {
                             font: {
                                 size: 14
