Vertical bar labels

--- a/templates/summary.html
+++ b/templates/summary.html
@@ -294,6 +294,7 @@
                     datalabels: {
                         anchor: 'center',
                         align: 'center',
+                        rotation: -90,
                         formatter: function(value) {
                             return (value > 0 ? '+' : '') + value.toFixed(0) + 's';
                         },
