Added a Push Uphills method

--- a/templates/index.html
+++ b/templates/index.html
@@ -35,6 +35,10 @@
                     <input type="checkbox" id="chosen" name="methods" value="Chosen Time">
                     <label for="chosen">Chosen Time</label>
                 </div>
+                <div class="checkbox-item">
+                    <input type="checkbox" id="push_uphills" name="methods" value="Push Uphills">
+                    <label for="push_uphills">Push Uphills</label>
+                </div>
             </div>
 
             <label>If Chosen Time is selected:</label>
