Changed some wording

--- a/templates/tracking.html
+++ b/templates/tracking.html
@@ -10,7 +10,7 @@
     
     <div class="info-box">
         <p><strong>Segment:</strong> <span id="current-segment">0</span> / <span id="total-segments">{{ total_segments }}</span></p>
-        <p><strong>Predicted Pace for this Segment:</strong> <span id="predicted-pace">--:--</span> min/km</p>
+        <p><strong>Segment Predicted Pace:</strong> <span id="predicted-pace">--:--</span> min/km</p>
     </div>
 
     <div class="timer-display" id="total-timer">00:00:00</div>
