--- a/templates/summary.html
+++ b/templates/summary.html
@@ -380,7 +380,17 @@
                         }
                     },
                     datalabels: {
-                        display: true  // Don't show labels on elevation bars
+                        anchor: 'center',
+                        align: 'center',
+                        rotation: -90,
+                        formatter: function(value) {
+                            return (value > 0 ? '+' : '') + value.toFixed(0) + 'm';
+                        },
+                        color: 'white',
+                        font: {
+                            weight: 'bold',
+                            size: 12
+                        }
                     }
                 },
                 scales: {
