--- a/templates/summary.html
+++ b/templates/summary.html
@@ -295,17 +295,7 @@
                         }
                     },
                     datalabels: {
-                        anchor: 'center',
-                        align: 'center',
-                        rotation: -90,
-                        formatter: function(value) {
-                            return (value > 0 ? '+' : '') + value.toFixed(0) + 's';
-                        },
-                        color: 'white',
-                        font: {
-                            weight: 'bold',
-                            size: 12
-                        }
+                        display: false
                     }
                 },
                 scales: {
@@ -380,17 +370,7 @@
                         }
                     },
                     datalabels: {
-                        anchor: 'center',
-                        align: 'center',
-                        rotation: -90,
-                        formatter: function(value) {
-                            return (value > 0 ? '+' : '') + value.toFixed(0) + 'm';
-                        },
-                        color: 'white',
-                        font: {
-                            weight: 'bold',
-                            size: 12
-                        }
+                        display: false
                     }
                 },
                 scales: {
