Renamed Faster Downhills method to Push Downhills

--- a/templates/index.html
+++ b/templates/index.html
@@ -20,8 +20,8 @@
                     <label for="push_uphills">Push Uphills</label>
                 </div>
                 <div class="checkbox-item">
-                    <input type="checkbox" id="faster" name="methods" value="Faster Downhills">
-                    <label for="faster">Faster Downhills</label>
+                    <input type="checkbox" id="push" name="methods" value="Push Downhills">
+                    <label for="push">Push Downhills</label>
                 </div>
                 <div class="checkbox-item">
                     <input type="checkbox" id="flats" name="methods" value="Push Flats">
