Changed index page and css slightly for Chosen Time coaching method

--- a/static/style.css
+++ b/static/style.css
@@ -392,3 +392,15 @@ table.data tr:hover {
 .mb-20 {
     margin-bottom: 20px;
 }
+
+/* Remove number input arrows/spinners */
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
+input[type="number"] {
+    -moz-appearance: textfield;
+    appearance: textfield;
+}
