Added Final Page of WebApp for Deeper Analytics

--- a/templates/summary.html
+++ b/templates/summary.html
@@ -81,8 +81,13 @@
     </table>
 
     <div class="text-center mt-20">
+        <a href="{{ url_for('deeper_analytics') }}" class="button button-success">View Deeper Analytics 🔍</a>
         <a href="{{ url_for('index') }}" class="button button-primary">New Run</a>
     </div>
+
+    <!--<div class="text-center mt-20">
+        <a href="{{ url_for('index') }}" class="button button-primary">New Run</a>
+    </div>-->
 
     <script>
         // Register the datalabels plugin
