Added Data Labels to graphs and Pause/Resume functionality

--- a/static/style.css
+++ b/static/style.css
@@ -598,3 +598,12 @@ canvas {
         font-size: 16px;
     }
 }
+
+.button-warning {
+    background-color: #f39c12;
+    color: white;
+}
+
+.button-warning:hover {
+    background-color: #e67e22;
+}
