Added some descriptions to the Index page

--- a/templates/index.html
+++ b/templates/index.html
@@ -35,23 +35,23 @@
             <div class="checkbox-group">
                 <div class="checkbox-item">
                     <input type="checkbox" id="push_uphills" name="methods" value="Push Uphills">
-                    <label for="push_uphills">Push Uphills</label>
+                    <label for="push_uphills">Push Uphills (run uphills faster)</label>
                 </div>
                 <div class="checkbox-item">
                     <input type="checkbox" id="push" name="methods" value="Push Downhills">
-                    <label for="push">Push Downhills</label>
+                    <label for="push">Push Downhills (run downhills faster)</label>
                 </div>
                 <div class="checkbox-item">
                     <input type="checkbox" id="flats" name="methods" value="Push Flats">
-                    <label for="flats">Push Flats</label>
+                    <label for="flats">Push Flats (run flats faster, push for your baseline pace)</label>
                 </div>
                 <div class="checkbox-item">
                     <input type="checkbox" id="negative" name="methods" value="Negative Splits">
-                    <label for="negative">Negative Splits</label>
+                    <label for="negative">Negative Splits (run the second half of the run faster)</label>
                 </div>
                 <div class="checkbox-item">
                     <input type="checkbox" id="chosen" name="methods" value="Chosen Time">
-                    <label for="chosen">Chosen Time</label>
+                    <label for="chosen">Chosen Time (if you have a desired finishing time)</label>
                 </div>
             </div>
 
